--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -14,7 +14,7 @@
     }
     @font-face {
         font-family: 'SetoFont';
-        src: url('/fonts/XiaolaiSC-Regular.ttf') format('truetype');
+        src: url('/fonts/XiaolaiSC-Regular.woff2') format('woff2');
         font-style: normal;
     }
 </style>
